// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInfo tests should render userInfo with props 1`] = `
"<div className=\\"bg-dark text-light d-flex align-items-center justify-content-center p-3\\">
  <div>
    <h2 className=\\"text-center\\">
      Alice Woo
    </h2>
    <img alt=\\"Alice Woo\\" className=\\"w-200\\" src=\\"https://i.pinimg.com/474x/56/8f/a2/568fa2f17d494f297e609eb5e9404c8d.jpg\\" />
  </div>
  <div className=\\"ml-3\\">
    <p>
      ⬅️ Followers: 1
    </p>
    <p>
      ➡️ Following: 2
    </p>
    <p>
      ❤️ Total likes: 3
    </p>
    <p>
      🎥 Total videos: 4
    </p>
  </div>
</div>"
`;

exports[`UserInfo tests should render userInfo without props 1`] = `
"<div className=\\"bg-dark text-light d-flex align-items-center justify-content-center p-3\\">
  <div>
    <h2 className=\\"text-center\\">
      John Doe
    </h2>
    <img alt=\\"John Doe\\" className=\\"w-200\\" src=\\"https://pbs.twimg.com/profile_images/1326707048478892033/Ln0v50LP_400x400.jpg\\" />
  </div>
  <div className=\\"ml-3\\">
    <p>
      ⬅️ Followers: no data
    </p>
    <p>
      ➡️ Following: no data
    </p>
    <p>
      ❤️ Total likes: no data
    </p>
    <p>
      🎥 Total videos: no data
    </p>
  </div>
</div>"
`;
